Fixes buttons alignment (+1 squashed commits)
Squashed commits:

[f8966ce] Fixes buttons alignment

--- a/app/styles/_box.scss
+++ b/app/styles/_box.scss
@@ -430,7 +430,6 @@
             margin-left: 8px;
             margin: 8px 0;
             font-size: 2.2em;
-            top: 19px;
         }
     }
 }
